# wgs-8

./: .gitignore  Makefile.am  configure.ac
kmer/libkmer/: driver-existDB.C  driver-posDB.C  kmer-mask.C
kmer/libmeryl/: Makefile.am  libmeryl.C
kmer/libseq/: selftest.C  test-correctSequence.H  test-merStream.C  test-seqCache.C  test-seqStream.C
kmer/libutil/: Makefile.am  unaryEncodingTester.C  util.h
kmer/meryl/: Makefile.am  args.C  asmMerQC-regions.C  asmMerQC.C  build.C  compare-counts.C  m.C  mapMers-depth.C  mapMers.C  maskMers.C  merge.listmerge.C  merge.qsort.C  mervin.C  meryl.C  simple.C  testPositionBias.C
src/: AS_global.C  AS_global.H  Makefile.am  c_make.as
src/AS_ALN/: CA_ALN_local.C  Makefile.am
src/AS_ARD/: AS_ARD_database.cc  SQLOutput.cc  getAssembly.cc  loadAssembly.cc
src/AS_BAT/: AS_BAT_BestOverlapGraph.C  Makefile.am  bogart.C  classifyMates-globalData.C  classifyMates.H  classifyMatesApply.C  classifyMatesPairwise.C  computeCoverageStat.C  erate-estimate.C  markRepeatUnique.C  memoryMappedFile.H  splitUnitigs.C
src/AS_BOG/: AS_BOG_BestOverlapGraph.C  AS_BOG_MateLocation.C  Makefile.am  analyzeBest.C  fixUnitigs.C
src/AS_CGB/: AS_CGB_Bubble.C  AS_CGB_Bubble_Popper.C  AS_CGB_Bubble_PopperMethods.C  AS_CGB_Bubble_dfs.C  AS_CGB_cga.C  AS_CGB_cgb.C  AS_CGB_classify.C  AS_CGB_edgemate.C  AS_CGB_fga.C  AS_CGB_fgb.C  AS_CGB_main.C  AS_CGB_traversal.C  AS_CGB_unitigger.C  AS_CGB_walk.C  AS_FGB_contained.C  AS_FGB_io.C  Makefile.am
src/AS_CGW/: AS_CGW_histo.C  CIEdgeT_CGW.C  CIScaffoldT_Biconnected_CGW.C  CIScaffoldT_CGW.C  CIScaffoldT_Cleanup_CGW.C  CIScaffoldT_MergeScaffolds.C  CIScaffoldT_Merge_CGW.C  CIScaffoldT_Merge_Interleaved.C  Celamy_CGW.C  ChunkOverlap_CGW.C  ContigT_CGW.C  GraphCGW_T.C  Input_CGW.C  Instrument_CGW.C  LeastSquaresGaps_CGW.C  Makefile.am  MarkInternalEdgeStatus.C  MergeEdges_CGW.C  SEdgeT_CGW.C  ScaffoldGraph_CGW.C  SplitScaffolds_CGW.C  Stats_CGW.C  TransitiveReduction_CGW.C  cgwDump.C  dumpSingletons.C  eCR-diagnostic.C  eCR-examineGap.C  eCR.C  frgs2clones.C
src/AS_CNS/: AbacusRefine.C  ApplyAlignment.C  Makefile.am  MergeMultiAligns.C  MultiAlignMatePairAnalysis.C  MultiAlignSizeAnalysis.C  MultiAlignment_CNS.C  SeqAn_CNS.C  addReadsToUnitigs.C  fast_consensus.pl  tigStore.C  utgcns.C  utgcnsfix.C
src/AS_ENV/: Makefile.am  greedyFragmentTiling.C  metagenomics_ovl_analyses.C
src/AS_GKP/: AS_GKP_dump.C  AS_GKP_edit.C  AS_GKP_errors.C  AS_GKP_main.C  Makefile.am  fastqAnalyze.C  fastqSample.C  gkpStoreDumpFASTQ.C  sffToCA.C  upgrade-v6-to-v7.C
src/AS_LIN/: Makefile.am
src/AS_MER/: AS_MER_meryl.cc  Makefile.am  estimate-mer-threshold.C  merTrim.C  mercy-regions.C  mercy.C  overmerry.C
src/AS_MSG/: AS_MSG_pmesg.C  AS_MSG_pmesg1.C  AS_MSG_pmesg2.C  ExtractMessages.C  Makefile.am
src/AS_OBT/: Makefile.am  chimera.C  deduplicate.C  finalTrim-largestCovered.C  finalTrim.C  initialTrim.C  removeMateOverlap.C
src/AS_OVL/: CatCorrectsOVL.C  CorrectOlapsOVL.C  FragCorrectOVL.C  Makefile.am  OlapFromSeedsOVL.C  OlapFromSeedsOVL.H  ShowCorrectsOVL.C  overlap_partition.C
src/AS_OVM/: Makefile.am  overlapInCore.C
src/AS_OVS/: AS_UTL_histogram.H  Makefile.am  filterOverlap.C  overlapStats.C  overlapStoreBucketizer.C  overlapStoreBuild.C  overlapStoreIndexer.C  overlapStoreSorter.C  overlapStore_dump.C  overlapStore_erates.C  overlapStore_genomeLength.C
src/AS_PBR/: AS_PBR_dumpStore.cc  Makefile.am  TrimFastqByQVWindow.cc  addCNSToStore.pl  convertToPBCNS.pl
src/AS_PER/: AS_PER_encodeSequenceQuality.C  AS_PER_genericStore.C  AS_PER_gkStore.C  AS_PER_gkStore_IID.C  AS_PER_gkStore_UID.C  AS_PER_gkStore_fragments.C  AS_PER_gkStream.C  Makefile.am
src/AS_REF/: Makefile.am  buildRefContigs.C  buildRefOverlaps.C  refAlignment.H
src/AS_REZ/: Makefile.am  MicroHetREZ.C
src/AS_RUN/: Makefile.am  fragmentDepth.C  runCA.pl
src/AS_TER/: Makefile.am  analyzePosMap-gapFillProbability.C  analyzePosMap-libraryFate.C  analyzePosMap-load.C  analyzePosMap.C  asmOutputFasta.C  asmOutputStatistics.C  buildPosMap.C  fragsInVars.C  terminator.C
src/AS_UID/: Makefile.am
src/AS_UTL/: AS_UTL_Hash.C  AS_UTL_UID.C  AS_UTL_Var.C  AS_UTL_Var.H  AS_UTL_alloc.C  AS_UTL_fasta.C  AS_UTL_fasta.H  AS_UTL_fileIO.C  AS_UTL_histo.C  AS_UTL_skiplist_test.C  Makefile.am  testHashTable.C
