noinst_LIBRARIES += %D%/libAS_ALN.a
%C%_libAS_ALN_a_SOURCES = %D%/AS_ALN_dpaligner.C		\
              %D%/AS_ALN_qvaligner.C %D%/AS_ALN_loverlapper.C	\
              %D%/AS_ALN_pieceOlap.C %D%/AS_ALN_forcns.C	\
              %D%/CA_ALN_local.C %D%/CA_ALN_overlap.C		\
              %D%/AS_ALN_bruteforcedp.C

libCA_a_SOURCES += $(%C%_libAS_ALN_a_SOURCES)
