noinst_LIBRARIES += lib/libAS_CGB.a
lib_libAS_CGB_a_SOURCES = %D%/AS_CGB_histo.C

libCA_a_SOURCES += $(lib_libAS_CGB_a_SOURCES)

noinst_HEADERS += %D%/AS_CGB_Bubble_Graph.H %D%/AS_CGB_all.H	\
%D%/AS_CGB_Bubble_PopperMethods.H %D%/AS_CGB_histo.H		\
%D%/AS_CGB_unitigger_globals.H %D%/AS_CGB_Bubble_Popper.H	\
%D%/AS_CGB_Bubble.H %D%/AS_CGB_Bubble_VertexSet.H		\
%D%/AS_CGB_methods.H
