noinst_LIBRARIES += %D%/libAS_CGW.a
%C%_libAS_CGW_a_SOURCES = %D%/Globals_CGW.C %D%/CIEdgeT_CGW.C			\
                          %D%/CIScaffoldT_Analysis.C			\
                          %D%/CIScaffoldT_Biconnected_CGW.C			\
                          %D%/CIScaffoldT_CGW.C %D%/CIScaffoldT_Cleanup_CGW.C	\
                          %D%/CIScaffoldT_Merge_CGW.C			\
                          %D%/CIScaffoldT_Merge_Interleaved.C		\
                          %D%/CIScaffoldT_Merge_AlignScaffold.C		\
                          %D%/CIScaffoldT_MergeScaffolds.C %D%/Celamy_CGW.C	\
                          %D%/ChunkOverlap_CGW.C %D%/ContigT_CGW.C		\
                          %D%/DemoteUnitigsWithRBP_CGW.C			\
                          %D%/fragmentPlacement.C %D%/GraphCGW_T.C		\
                          %D%/GraphEdgeIterator.C %D%/Input_CGW.C		\
                          %D%/Instrument_CGW.C %D%/InterleavedMerging.C		\
                          %D%/LeastSquaresGaps_CGW.C			\
                          %D%/MarkInternalEdgeStatus.C %D%/MergeEdges_CGW.C	\
                          %D%/Output_CGW.C %D%/SEdgeT_CGW.C			\
                          %D%/ScaffoldGraph_CGW.C %D%/SplitScaffolds_CGW.C	\
                          %D%/Stats_CGW.C %D%/TransitiveReduction_CGW.C		\
                          %D%/ShatterScaffolds_CGW.C

libCA_a_SOURCES += $(%C%_libAS_CGW_a_SOURCES)
