noinst_LIBRARIES += %D%/libAS_CNS.a
%C%_libAS_CNS_a_SOURCES = %D%/MultiAlign.C				\
                          %D%/MultiAlignMatePairAnalysis.C		\
                          %D%/MultiAlignSizeAnalysis.C			\
                          %D%/MultiAlignPrint.C %D%/MultiAlignStore.C	\
                          %D%/MultiAlignment_CNS.C %D%/RefreshMANode.C	\
                          %D%/AbacusRefine.C %D%/ApplyAlignment.C	\
                          %D%/BaseCall.C %D%/GetAlignmentTrace.C	\
                          %D%/MergeMultiAligns.C %D%/MergeRefine.C	\
                          %D%/MultiAlignContig.C			\
                          %D%/MultiAlignUnitig.C %D%/PrintAlignment.C	\
                          %D%/ReplaceEndUnitigInContig.C

libCA_a_SOURCES += $(%C%_libAS_CNS_a_SOURCES)
