noinst_LIBRARIES += lib/libAS_OVS.a
lib_libAS_OVS_a_SOURCES = %D%/AS_OVS_overlap.C		\
                          %D%/AS_OVS_overlapFile.C	\
                          %D%/AS_OVS_overlapStore.C

libCA_a_SOURCES += $(lib_libAS_OVS_a_SOURCES)

noinst_HEADERS += %D%/AS_OVS_overlapFile.H %D%/AS_OVS_overlap.H	\
%D%/overlapStore.H %D%/overlapStatsBoringStuff.H		\
%D%/AS_OVS_overlapStore.H %D%/AS_UTL_histogram.H
