noinst_LIBRARIES += lib/libAS_PER.a
lib_libAS_PER_a_SOURCES = %D%/AS_PER_genericStore.C			\
                          %D%/AS_PER_gkLibrary.C %D%/AS_PER_gkStore.C	\
                          %D%/AS_PER_gkStore_IID.C			\
                          %D%/AS_PER_gkStore_PLC.C			\
                          %D%/AS_PER_gkStore_UID.C			\
                          %D%/AS_PER_gkStore_clearRange.C		\
                          %D%/AS_PER_gkStore_fragments.C		\
                          %D%/AS_PER_gkStore_load.C			\
                          %D%/AS_PER_gkStore_partition.C		\
                          %D%/AS_PER_gkStore_stats.C			\
                          %D%/AS_PER_gkStream.C				\
                          %D%/AS_PER_encodeSequenceQuality.C

libCA_a_SOURCES += $(lib_libAS_PER_a_SOURCES)
