noinst_LIBRARIES += %D%/libAS_REZ.a
%C%_libAS_REZ_a_SOURCES = %D%/ConsistencyChecksREZ.C %D%/GapFillREZ.C	\
                          %D%/GapWalkerREZ.C %D%/StatisticsREZ.C	\
                          %D%/UpdateREZ.C %D%/UtilsREZ.C		\
                          %D%/MicroHetREZ.C

libCA_a_SOURCES += $(%C%_libAS_REZ_a_SOURCES)
