noinst_LIBRARIES += lib/libAS_UTL.a
lib_libAS_UTL_a_SOURCES = %D%/AS_UTL_Hash.C %D%/AS_UTL_heap.C %D%/AS_UTL_Var.C	\
                          %D%/AS_UTL_rand.C %D%/AS_UTL_interval.C		\
                          %D%/UnionFind_AS.C %D%/AS_UTL_skiplist.C		\
                          %D%/AS_UTL_alloc.C %D%/AS_UTL_fileIO.C		\
                          %D%/AS_UTL_fasta.C %D%/AS_UTL_UID.C			\
                          %D%/AS_UTL_reverseComplement.C			\
                          %D%/AS_UTL_decodeRange.C %D%/AS_UTL_stackTrace.C

libCA_a_SOURCES += $(lib_libAS_UTL_a_SOURCES)
